{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 44,
  "lineage": "9652bfbc-e703-7b28-72ae-2ba65150871d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:130193131803:security-group/sg-0fe3623734ee79d36",
            "description": "Security group to allow HTTP traffict to the nginx instance",
            "egress": [],
            "id": "sg-0fe3623734ee79d36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule to allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "130193131803",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "tags_all": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "timeouts": null,
            "vpc_id": "vpc-488bab23"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nignx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:130193131803:security-group/sg-0745cfe9821e57c55",
            "description": "Security group to allow traffic from load balancer to nginx server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0745cfe9821e57c55",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Testing All trafic rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "213.127.72.237/32"
                ],
                "description": "SSH rule from my local machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP rule from the load balancer",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe3623734ee79d36"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "nignx_sg",
            "name_prefix": "",
            "owner_id": "130193131803",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "tags_all": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "timeouts": null,
            "vpc_id": "vpc-488bab23"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Rule to allow HTTP traffic",
            "from_port": 80,
            "id": "sgrule-654737795",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe3623734ee79d36",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nignx_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-145168321",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0745cfe9821e57c55",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nignx_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nignx_http_alb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "HTTP rule from the load balancer",
            "from_port": 8080,
            "id": "sgrule-788224314",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0745cfe9821e57c55",
            "self": false,
            "source_security_group_id": "sg-0fe3623734ee79d36",
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.nignx_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nignx_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "213.127.72.237/32"
            ],
            "description": "SSH rule from my local machine",
            "from_port": 22,
            "id": "sgrule-1967304874",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0745cfe9821e57c55",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nignx_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "iobuilders-alb-logs-bucket",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:130193131803:loadbalancer/app/iobuilders-alb/dbf7637d5417fd99",
            "arn_suffix": "app/iobuilders-alb/dbf7637d5417fd99",
            "dns_name": "iobuilders-alb-1090915511.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:130193131803:loadbalancer/app/iobuilders-alb/dbf7637d5417fd99",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "iobuilders-alb",
            "security_groups": [
              "sg-0fe3623734ee79d36"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-582c2733"
              },
              {
                "subnet_id": "subnet-b9683df4"
              },
              {
                "subnet_id": "subnet-bf9adcc2"
              }
            ],
            "subnets": [
              "subnet-582c2733",
              "subnet-b9683df4",
              "subnet-bf9adcc2"
            ],
            "tags": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "tags_all": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "vpc_id": "vpc-488bab23",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.attachment",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:130193131803:targetgroup/iobuilders-tg-nignx/30ee3a164a166aa5-20210912174512665200000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:130193131803:targetgroup/iobuilders-tg-nignx/30ee3a164a166aa5",
            "target_id": "i-0ba701ebc03fb456d"
          },
          "dependencies": [
            "module.nignx.aws_instance.ec2",
            "module.target_group.aws_lb_target_group.target-group"
          ]
        }
      ]
    },
    {
      "module": "module.http_listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:130193131803:listener/app/iobuilders-alb/dbf7637d5417fd99/f05bbfed646ae2e6",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:130193131803:targetgroup/iobuilders-tg-nignx/30ee3a164a166aa5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:130193131803:listener/app/iobuilders-alb/dbf7637d5417fd99/f05bbfed646ae2e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:130193131803:loadbalancer/app/iobuilders-alb/dbf7637d5417fd99",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.alb.aws_lb.elb",
            "module.target_group.aws_lb_target_group.target-group"
          ]
        }
      ]
    },
    {
      "module": "module.nignx",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0519bb2350dcf4e2d",
            "arn": "arn:aws:ec2:eu-central-1:130193131803:instance/i-0ba701ebc03fb456d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba701ebc03fb456d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "iobuilders",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01a1ac966c03807d6",
            "private_dns": "ip-172-31-19-242.eu-central-1.compute.internal",
            "private_ip": "172.31.19.242",
            "public_dns": "ec2-3-67-8-204.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.8.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f81ca86a40974306",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "nignx_sg"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-582c2733",
            "tags": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "tags_all": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "tenancy": "default",
            "volume_tags": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "vpc_security_group_ids": [
              "sg-0745cfe9821e57c55"
            ]
          },
          "dependencies": [
            "aws_security_group.nignx_sg",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:130193131803:targetgroup/iobuilders-tg-nignx/30ee3a164a166aa5",
            "arn_suffix": "targetgroup/iobuilders-tg-nignx/30ee3a164a166aa5",
            "deregistration_delay": 400,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:130193131803:targetgroup/iobuilders-tg-nignx/30ee3a164a166aa5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "iobuilders-tg-nignx",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "tags_all": {
              "CreatedOn": "12 Junio 2021",
              "Environment": "iobuilders",
              "Owner": "ed"
            },
            "target_type": "instance",
            "vpc_id": "vpc-488bab23"
          }
        }
      ]
    }
  ]
}